--- a/main.tex
+++ b/main.tex
@@ -50,7 +50,7 @@
 		\vfill
 	\end{titlepage}
 		
-	
+	Knowledge does not exercise power simply by being true. While knowledge may be acquired through individual inquiry, its significance \textemdash\ and thus its power to influence thought and action \textemdash\ often depends on the means of exchange.
 	
 	
 	
