--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,7 @@ When considered in a social context, the power of mathematical knowledge is no l
 
 Mathematics reveals that epistemic power is mostly secured irrespective of how knowledge is conveyed, whereas social power is largely contingent on it. While neither claim holds universality, the identified exceptions serve to delimit rather than undermine their validity.
 
-
+Unlike Mathematics, Human Sciences exhibits a shift in the balance of
 
 
 
